# QueensAgent_pr2

./: CMakeLists.txt  README.md  chessboardwidget.cpp  chessboardwidget.h  knowledgebase.cpp  knowledgebase.h  main.cpp  mainwindow.cpp  mainwindow.h  queenagent.cpp  queenagent.h  queenssolver.cpp  queenssolver.h
